--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -3,7 +3,17 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+body {
+    background-color: #1a365d; 
+    height: 100vh;
+    background-image: 
+    radial-gradient(at 0% 0%, hsla(210, 100%, 20%, 1) 0px, transparent 50%),
+    radial-gradient(at 50% 0%, hsla(220, 80%, 40%, 1) 0px, transparent 50%),
+    radial-gradient(at 100% 0%, hsla(190, 70%, 50%, 1) 0px, transparent 50%),
+    radial-gradient(at 50% 100%, hsla(230, 60%, 30%, 1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(200, 90%, 45%, 1) 0px, transparent 50%);
+  background-attachment: fixed;
+}
 h2 {
     text-align: center;
     color: white;
