--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -29,6 +29,10 @@ body {
     
 }
 
+#cadar {
+    font-size: 1.3em;
+}
+
 form {
     text-align: center;
 }
@@ -37,6 +41,7 @@ h2 {
     text-align: center;
     padding-top: 20px;
     color: white;
+    font-size: 1.3em;
 
 }
 
